          message is printed to the status bar instead.
          
        * MetaContacts support - the status icons in the title bar and on the tool
          bar are now showing the actual protocol icons. Also, smileyadd will now use
          the smiley set which has been configured for the actual protocol. No more
          need to define an extra smiley set for the MetaContacts protocol.
          
          Consequently, the MetaContacts control menu has been moved from the status
          bar to the tool bar -> right click the protocol button for the MetaContacts
          context menu.
          
        ! fixed small visual glitch with the add contact bar.
          
Version 0.9.9.92 - 2005/03/31

        * plugins like HTTPServer (and all others which try to feed text into the message 
          input area) should now work with the unicode version of tabsrmm.
        
        ! fixed broken dialog layout on forward message
        
        ! nicknames may again contain characters like { and } w/o messing up the message
          log display.
        
        * status bar remembers typing notification state
        
        * static avatar code changed. It's now really static, although, internally
          it is using the dynamic resizing code aswell. Static avatar mode can be
          selected on the "General" options page, and you can specify a height limit for
          avatars. Bigger images will be scaled down accordingly. When moving the splitter
          upwards, the image will be vertically centered within the available space.
          The splitter position may be adjusted to make enough space for the avatar.
          
          NOTE: If you set the limit to 0, the avatars are hard limited to 100 pixels
          in height (MSN appears to have the biggest avatars at 96x96 pixels).

        ! GUI fixes (option pages)...
        
        + it is now possible to set RTL as default text direction (Message Log options